Lab09 Python and Arduino

--- a/ENGR114-Labs/Lab09-External_Hardware/ENGR114-Lab09-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab09-External_Hardware/ENGR114-Lab09-External-Hardware.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 08 - External Hardware"
+    "# Lab 09 - External Hardware"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\n",
     " > https://www.arduino.cc/en/Main/Software \n",
     "\n",
-    "Scroll down the page to the Download the Arduino IDE section. Be sure to select: Windows ZIP for for non-admin install as new software can not be installed on lab computers without administrator privileges. You can select JUST DOWNLOAD from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. "
+    "Scroll down the page to the Download the Arduino IDE section. Be sure to select: **Windows ZIP for for non-admin install** as new software can not be installed on lab computers without administrator privileges. You can select **JUST DOWNLOAD** from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. "
    ]
   },
   {
@@ -109,7 +109,7 @@
     "#### (b) Wire an LED to the Arduino \n",
     "\n",
     "From the Arduino kit, take out an LED, a 330 Ohm resistor and two jumper wires. Connect the LED, resistor and wires as shown below. Also see the SIK GUIDE page 19 and the SparkFun Iventor’s kit online guide: \n",
-    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led Note that LED's have two different length \"legs\". The short leg should connect to ground (thru a resistor), the long leg should connect to the Arduino's Pin 13.\n",
+    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led Note that LED's have two different length \"legs\". The short leg connects to ground (thru a resistor), the long leg connects to Pin 13 on the Arduino.\n",
     "\n",
     "![Arduino with LED Frizting](images/Arduino_LED_fritzing.png)"
    ]
@@ -122,13 +122,18 @@
     "\n",
     "Open the Arduino IDE folder and open the Arduino.exe program. Open the Arduino **Blink.ino** sketch by going to: [File] -->  [Examples] --> [Basics] -->  [01.Blink]\n",
     "\n",
-    "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly with Arduinos. Use a USB port which is part of the computer. In the Arduino IDE Window that contains the Blink sketch, click the check mark to Verify, then click the arrow to Upload. \n",
+    "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly with Arduinos. Use a USB port which is part of the computer. In the Arduino IDE Window that contains the **Blink.ino** sketch, click the check mark to Verify, then click the arrow to Upload. \n",
     "\n",
     "![Check to Verify](images/Check_to_Verify.png)\n",
     "\n",
     "![Arrow to Upload](images/Arrow_to_Upload.png)\n",
     "\n",
-    "Once the upload is complete, the red LED on the Arduino should blink on and off. If you don't see the Arduino's LED blinking, you need to do some trouble shooting. Check the COM Port or try unplugging and re-plugging the Arduino. "
+    "Once the upload is complete, the red LED on the Arduino should blink on and off. \n",
+    "\n",
+    "If you don't see the Arduino's LED blinking, you need to do some trouble shooting:\n",
+    " * Check the COM Port under [Tools] --> [Ports]\n",
+    " * Check which type of board is selected under [Tools] --> [Board]. **Arduino/Genuino Uno** needs to be selected\n",
+    " * Try unplugging and re-plugging in the Arduino's red USB cable. Ensure the cable is seated in the computer and Arduino."
    ]
   },
   {
@@ -149,6 +154,40 @@
     "In the Arduino IDE Window that contains the PhysicalPixel sketch, open the Serial Monitor by going to [Tools] --> [Serial Monitor].\n",
     "\n",
     "In the Serial Monitor type: ```H``` and click [Send] (or press ENTER). Then type: ```L``` and click [Send] (or press ENTER). You should see the Arduino LED switch on and off. If the LED does not turn on and off, make sure that the Port is set correctly in [Tools] --> [Port] and make sure that the Serial Monitor is set to 9600 baud. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (f) Use the Python REPL to turn the Arduino LED on and off\n",
+    "\n",
+    "At the Anaconda Prompt, type ```> python``` to enter the Python REPL. At the Python REPL, type the following commands. If the command is preceeded by a REPL prompt ```>>>``` type the command into the REPL. If the line does not start with a REPL prompt, this line represents expected output.\n",
+    "\n",
+    "```\n",
+    ">>> import serial\n",
+    ">>> import time\n",
+    "\n",
+    ">>> ser = serial.Serial('COM4',9600)  # open serial port\n",
+    ">>> time.sleep(2)                      # wait 2 seconds for connection\n",
+    ">>> ser.name()\n",
+    "'COM4'\n",
+    "\n",
+    ">>> ser.write(b'H')\n",
+    "# LED turns on\n",
+    "\n",
+    ">>> ser.write(b'L')\n",
+    "# LED turns off\n",
+    "\n",
+    ">>> ser.write(b'H')\n",
+    "# LED turns on\n",
+    "\n",
+    ">>> ser.write(b'L')\n",
+    "# LED turns off\n",
+    "\n",
+    ">>> ser.close()\n",
+    ">>> exit()\n",
+    "```\n"
    ]
   },
   {
@@ -345,7 +384,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (e) Build a Python script and to record the potentiometer level and draw a plot\n",
+    "#### (e) Use the Python REPL to read the potentiometer data\n",
+    "\n",
+    "At the Anaconda prompt, type ```> python``` to enter the Python REPL. At the Python REPL, type the following commands. If the command is preceeded by a REPL prompt ```>>>``` type the command into the REPL. If the line does not start with a REPL prompt, this line represents expected output.\n",
+    "\n",
+    "```\n",
+    "# serial read using the Python REPL\n",
+    "\n",
+    "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
+    ">>> import serial\n",
+    ">>> import time\n",
+    ">>> ser = serial.Serial('COM4',9600)\n",
+    ">>> time.sleep(2)\n",
+    ">>> b = ser.readline()\n",
+    ">>> b\n",
+    "b'409\\r\\n'\n",
+    ">>> type(b)\n",
+    "<class 'bytes'>\n",
+    ">>> str_rn = b.decode()\n",
+    ">>> str_rn\n",
+    "'409\\r\\n'\n",
+    ">>> str = str_rn.rstrip()\n",
+    ">>> str\n",
+    "'409'\n",
+    ">>> type(str)\n",
+    "<class 'str'>\n",
+    ">>> f = float(str)\n",
+    ">>> f\n",
+    "409.0\n",
+    ">>> type(f)\n",
+    "<class 'float'>\n",
+    ">>> ser.close()\n",
+    ">>> exit()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (f) Build a Python script and to record the potentiometer level and draw a plot\n",
     "\n",
     "After you can successfully turn the Arduino LED on and off by twisting the little blue potentiometer, and can see the plot line moving up and down in the Serial Plotter, build a Python script which reads and plots the potentiometer value. \n",
     "\n",
@@ -361,9 +440,12 @@
     "The next section of the script needs to set up the serial line for communication and read the sensor value of the potentiometer. Note the Port (```'COM4'```) must be set according to the port the Arduino is connected to. \n",
     "\n",
     "```\n",
-    "\n",
+    "# set up the serial line\n",
     "ser = serial.Serial('COM4', 9600)\n",
+    "time.sleep(2)\n",
+    "print(ser.name)\n",
     "\n",
+    "# Read and record the data\n",
     "data =[]                           # initialize and empty list to store the data\n",
     "for i in range(50):\n",
     "\tb = ser.readline()             # read a byte string line from the Arduino's serial output\n",
@@ -375,7 +457,11 @@
     "\ttime.sleep(0.1)                # wait (sleep) 0.2 seconds before the next reading\n",
     "\n",
     "ser.close()\n",
+    "\n",
+    "# Plot the data\n",
     "```\n",
+    "\n",
+    "\n",
     "\n",
     "Run the script and twist the potentiometer. You should see the potentiometer values running by in the Python REPL command window. \n",
     "\n",
@@ -449,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
