--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -28,13 +28,13 @@
     "\n",
     "### Course Description\n",
     "\n",
-    " * credits:\n",
-    " * Prerequisites:\n",
+    " * credits: 4\n",
+    " * Prerequisites: ENGR 101 or department-approved equivalent\n",
     " \n",
-    "### Course Meeting Times\n",
+    "### Course Meeting Times and Locations\n",
     "\n",
-    " * Lecture:\n",
-    " * Lab:\n",
+    " * Lecture: Tues 1pm-3:50pm in AM106\n",
+    " * Lab: Thurs 1pm-3:50pm in AM106\n",
     " \n",
     "## Course Materials\n",
     "\n",
@@ -44,9 +44,13 @@
     "\n",
     "### Other course materials\n",
     "\n",
-    "You need access the course programming environment, available at [https://engr114.org](https://engr114.org]). An @pcc.edu email address and password is needed to login.\n",
+    " * USB Thumb drive. 1GB size or larger will work fine.\n",
+    " * Scientific Calculator\n",
+    " * You need access the course programming environment, available at [https://engr114.org](https://engr114.org]). An @pcc.edu email address and password is needed to login.\n",
     "\n",
-    "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and chromebooks. But remember, you need an Internet connection to use it."
+    "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and chromebooks. But remember, you need an Internet connection to use it.\n",
+    "\n",
+    "If you would like to download and install the programming environment on your home computer, the download is free and available at [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
    ]
   },
   {
@@ -71,7 +75,7 @@
    "source": [
     "### Exams\n",
     "\n",
-    "It is the student's responsibility to notify the instructor **at least 3 days prior to the date of an exam** if the student is unable to take the exam when it is scheduled.  Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students that have testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed.\n",
+    "It is the student's responsibility to notify the instructor **at least 3 days prior to the date of an exam** if the student is unable to take the exam when it is scheduled.  Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students who has testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed.\n",
     "\n",
     "#### During Exams:\n",
     "\n",
@@ -80,7 +84,7 @@
     "   * During the written portion you can not use Python and computer monitors must be off\n",
     "   * During the computer portion you must use Python on the computers in the classroom. No student laptops allowed on exams.\n",
     " * Generally, a calculator and one page of notes are allowed on the exams.\n",
-    " * You must complete the Exam during the exam period. Uploads after the deadline will not receive credit."
+    " * You must complete the exam during the exam period. Uploads after the deadline will not receive credit."
    ]
   },
   {
@@ -89,14 +93,14 @@
    "source": [
     "### Labs\n",
     "\n",
-    "Typically, lecture will be held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score will be dropped**. Lab assignments and grading are subject to change throughout the quarter."
+    "Typically, lecture will be held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score will be dropped**. Lab assignments and grading are subject to change throughout the quarter. Check D2L for specific lab submission deadlines and requirements."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In-class assignments\n",
+    "### In-Class Assignments\n",
     "\n",
     "Most lecture days will include an in-class assignment that needs to be uploaded to D2L by the end of the class period. See D2L for specific in-class assignment details. **No late in-class assignments will be accepted**.  **You must be present in lecture to receive credit for the in-class assignment**. Your **lowest in-class assignment score will be dropped**. In-class assignments and grading are subject to change throughout the quarter."
    ]
@@ -105,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Project\n",
+    "### Group Project\n",
     "\n",
     "You will complete a group project over the course of the quarter. This project is a group assignment. Project delivery will be at the end of the quarter. Students must be present when their project is delivered to receive credit. During the quarter there will be occasional project assignments to complete. See D2L for the project description and grading details. **No late projects will be accepted**."
    ]
@@ -122,17 +126,15 @@
     " * In-class: 5%\n",
     " * Project: 15%\n",
     " \n",
-    "Grades will be rounded to the nearest two significant figures (nearest whole percentage point) and converted to letter grades according to the following. 84.4999999% will round to an 84%, 84.5000% will round to 85%.\n",
+    "Grades will be rounded to the nearest two significant figures (nearest whole percentage point) and converted to letter grades according to the following. 84.4999999% rounds to an 84%, 84.50000% rounds to 85%.\n",
     "\n",
-    "100-90 = A\n",
-    "\n",
-    "80 - 89 = B\n",
-    "\n",
-    "70 - 79 = C\n",
-    "\n",
-    "65 - 69 = D\n",
-    "\n",
-    "0 - 64 = F"
+    "| Grade Percentage | Letter Grade |\n",
+    "| --- | --- |\n",
+    "| 100 - 90 | A |\n",
+    "| 80 - 89  | B |\n",
+    "| 70 - 79 |  C |\n",
+    "| 65 - 69 | D |\n",
+    "| 0 - 64 | F |"
    ]
   },
   {
@@ -265,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
