re-organized lab order

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -28,8 +28,9 @@
     "\n",
     "### Course Description\n",
     "\n",
-    " * credits: 4\n",
+    " * Predits: 4\n",
     " * Prerequisites: ENGR 101 or department-approved equivalent\n",
+    " * Summary: Introduces computer programming terminology and techniques as applied to specific engineering applications. Includes electrical circuit analysis, audio signal processing, image processing, and interfacing with hardware such as microcontrollers and analog-to-digital converters application. Covers reading and documenting code, compiling and testing code, and debugging and correcting defects found in code. \n",
     " \n",
     "### Course Meeting Times and Locations\n",
     "\n",
@@ -44,9 +45,10 @@
     "\n",
     "### Other course materials\n",
     "\n",
-    " * USB Thumb drive. 1GB size or larger will work fine.\n",
+    " * USB thumb drive. 1GB size or larger will work fine. Bring to every class.\n",
     " * Scientific Calculator\n",
     " * You need access the course programming environment, available at [https://engr114.org](https://engr114.org]). An @pcc.edu email address and password is needed to login.\n",
+    " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Board and USB cable will be available for purchase for $10.\n",
     "\n",
     "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and chromebooks. But remember, you need an Internet connection to use it.\n",
     "\n",
@@ -155,7 +157,7 @@
     "\n",
     "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the Registration Office.  To have tuition charges removed, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
     "\n",
-    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather please check the \\href{http://www.pcc.edu/}{PCC website}, call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to \\href{https://www.pcc.edu/about/announcements/closure-information.html}{FlashAlerts}."
+    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather please check the [PCC Website](http://www.pcc.edu/){PCC website}, call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
    ]
   },
   {
@@ -175,28 +177,43 @@
     "* [PCC Nondiscrimination Statement](https://www.pcc.edu/about/equity-inclusion/eeo-statement.html)\n",
     "\n",
     "#### Student services: \n",
-    "\\href{https://www.pcc.edu/resources/veterans/}{Veteran Resources}, \n",
     "\n",
-    "\\href{http://www.pcc.edu/resources/tutoring/sylvania/student-success/}{Sylvania Student Learning Center}, \n",
+    " * [Veteran Resources](https://www.pcc.edu/resources/veterans/) \n",
     "\n",
-    "\\href{https://www.pcc.edu/resources/women/sylvania/}{Sylvania Women's Resource Center},  * * \n",
+    " * [Sylvania Student Learning Center](http://www.pcc.edu/resources/tutoring/sylvania/student-success/) \n",
     "\n",
-    "{https://www.pcc.edu/resources/qrc/sylvania/}{Queer Resources and Programming at Sylvania}\n",
+    " * [Sylvania Women's Resource Center](https://www.pcc.edu/resources/women/sylvania/)\n",
     "\n",
-    "\\href{http://www.pcc.edu/about/policy/student-rights/}{Student Rights and Responsibilities}, Includes information on Children on PCC Properties, Academic Integrity Policy, Policy on Student Conduct\n",
+    " * [LGBTQ Resources and Programming at Sylvania](https://www.pcc.edu/resources/qrc/sylvania/)\n",
+    "\n",
+    "[Student Rights and Responsibilities](http://www.pcc.edu/about/policy/student-rights/), Includes information on Children on PCC Properties, Academic Integrity Policy, Policy on Student Conduct\n",
+    "     \n",
+    "#### Additional Classroom Rules\n",
     "     \n",
     " * Use of cell phones and other personal electronic devices, unless otherwise stated, is not allowed during classes, labs, or exams.\n",
+    " \n",
     " * The unauthorized recording (audio, video, or still pictures) of course sessions and distribution of said recordings is not permitted.\n",
-    " * The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather, or class situations.\n",
-    "\n",
-    "\\end{itemize}"
+    " \n",
+    " * The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather, or class situations."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Students with disabilities\n",
+    "### Students with Disabilities\n",
+    "\n",
+    "Students working with the Office for Students with Disabilities that may require classroom or course adjustment or accommodation should make their needs known to the instructor as early as possible.  The Office for Students with Disabilities may be contacted at: \n",
+    "\n",
+    "[Disability Services](www.pcc.edu/disability)\n",
+    "\n",
+    "Sylvania ST 229\n",
+    "\n",
+    "Portland, OR 97219\n",
+    "\n",
+    "Phone: 971-722-4341 (Voice)\n",
+    "\n",
+    "Email: disability.services@pcc.edu\n",
     "\n",
     "Students who have a documented disability and require accommodation should contact [Disabilities Services](http://www.pcc.edu/resources/disability) and provide the Approved Academic Accommodations letter to the Instructor."
    ]
@@ -235,10 +252,10 @@
     "| Week 4 | Plotting | Lab 4: Plotting |\n",
     "| Week 5 | Functions | Lab 5: Web API's |\n",
     "| Week 6 | Review | **Exam 1** |\n",
-    "| Week 7 | If, elif, else | Lab 6: Sound filters |\n",
+    "| Week 7 | If, elif, else | Lab 6: Audio Filtering |\n",
     "| Week 8 | Loops | Lab 7: Taylor Series |\n",
-    "| Week 9 | MicroPython | Lab 7: MicroPython |\n",
-    "| Week 9 | External Hardware | Lab 7: External Hardware |\n",
+    "| Week 9 | MicroPython | Lab 8: MicroPython |\n",
+    "| Week 9 | External Hardware | Lab 9: External Hardware |\n",
     "| Week 10 | Review | **Exam 2** |\n",
     "| Finals Week | Project Delivery | |"
    ]
