edits to syllabus

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -50,7 +50,7 @@
     " * You need access the course programming environment, available at [https://engr114.org](https://engr114.org]). An @pcc.edu email address and password is needed to login.\n",
     " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Board and USB cable will be available for purchase for $10.\n",
     "\n",
-    "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and chromebooks. But remember, you need an Internet connection to use it.\n",
+    "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks. But remember, you need an Internet connection to use it.\n",
     "\n",
     "If you would like to download and install the programming environment on your home computer, the download is free and available at [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
    ]
@@ -157,7 +157,7 @@
     "\n",
     "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the Registration Office.  To have tuition charges removed, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
     "\n",
-    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather please check the [PCC Website](http://www.pcc.edu/){PCC website}, call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
+    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather please check the [PCC Website](http://www.pcc.edu/), call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
    ]
   },
   {
@@ -205,7 +205,7 @@
     "\n",
     "Students working with the Office for Students with Disabilities that may require classroom or course adjustment or accommodation should make their needs known to the instructor as early as possible.  The Office for Students with Disabilities may be contacted at: \n",
     "\n",
-    "[Disability Services](www.pcc.edu/disability)\n",
+    "[www.pcc.edu/disability](https://pcc.edu/disability)\n",
     "\n",
     "Sylvania ST 229\n",
     "\n",
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
