revised Lab 5 Web API's

--- a/ENGR114-Labs/Lab05-WebAPIs/ENGR114-Lab05-WebAPIs.ipynb
+++ b/ENGR114-Labs/Lab05-WebAPIs/ENGR114-Lab05-WebAPIs.ipynb
@@ -29,29 +29,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order for you to accomplish this task, your code will need to do a couple of things: \n",
-    " * Validate the user input so that the user can only select certain options: \n",
-    "  * weather data types: temperature, humidity, pressure or rainfall \n",
-    "  * Number of data points: maximum of 8000, minimum of 1, integers only \n",
-    " * Call the ThingSpeak web API to import the data from the weather station. \n",
-    " * Clean up the data received from the ThingSpeak web API and produce a simple 1D array or series which contains the data points. \n",
-    " * Build a plot that displays the data the user asked for. The plot should contain the data point number the x-axis and the weather data on the y-axis. Include axis labels (with units) along with a descriptive title. "
+    "### Example of Final Functionality\n",
+    "\n",
+    "Below is an example of how the final lab7.py script will work:\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "Which weather type (temperature, humidity, rainfall or pressure)? temperature\n",
+    "\n",
+    "How many data points (maximum of 8000)? 800\n",
+    "\n",
+    "```\n",
+    "\n",
+    "![Plot of Temperature](images/plot_of_weather_data.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Outline of steps\n",
+    "\n",
+    "In order for you to accomplish this task, your code will need to do a couple of things: \n",
+    " * Validate the user input so that the user can only select certain options: \n",
+    "  * Weather data types: temperature, humidity, pressure or rainfall \n",
+    "  * Number of data points: maximum of 8000, minimum of 1, integers only \n",
+    " * Call the ThingSpeak web API to import the data from the weather station in Natick, MA. \n",
+    " * Clean up the data received from the ThingSpeak web API and produce a simple 1D array or series which contains the data points. \n",
+    " * Build a plot that displays the data the user asked for. The plot should contain the data point number on the x-axis and the weather data on the y-axis. Include axis labels (with units) and a descriptive title. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions\n",
+    "\n",
     "You will accomplish this task in a group. Each group member is responsible for creating one of four functions: \n",
+    "\n",
+    "#### user_input() function\n",
     "\n",
     "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a 1D matrix used by the ```call_API()``` function below. \n",
     "\n",
+    "#### call_API() function\n",
     "\n",
     "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. \n",
     "\n",
     "An example web API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the ```user_input()``` function above and the output will be sent to the ```clean_data()``` function below. \n",
     "\n",
+    "#### clean_data() function\n",
+    "\n",
     "```clean_data()``` A function to clean up the data and simplify it to a 1D matrix. See the Pandas documentation for information on how to convert a column of a Panda's dataframe into a Python list or Numpy array. Try using: df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20') to bring in a sample data set. Note the input of this function comes from the ```call_API()``` function above and the output needs to be a list or 1D array that will be used by the ```plot_data()``` function below. \n",
+    "\n",
+    "#### plot_data()function\n",
     "\n",
     "```plot_data()``` A function to plot the data. Data point number on the x-axis and the weather data on the y-axis. Axis labeled with units. Construct the title and y-axis labels dynamically as these will change based what the user selects. Note the input of this function will be a list or 1D array from the ```clean_data()``` function above as well as some of the user input gathered by the ```user_input()``` function. The output of this function will be a null (there will be no ```return``` statement, but within the body of the function, the plot will be called. "
    ]
@@ -60,9 +90,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After sharing the functions among your group, each student needs to create their .py-file script that imports and calls the four functions and completes the programming task. An example of how the .py-file should work is below: \n",
+    "### Final Notebook\n",
     "\n",
-    "[image of .py-file working]\n",
+    "After sharing the four functions among your group, each student needs to create their own notebook (.ipynb-file) that imports and calls the four functions and completes the programming task. The final notebook should be run, data entered and a plot produced.\n",
     "\n",
     "Your group will have to decide on a couple things: \n",
     " \n",
@@ -91,7 +121,7 @@
     "\n",
     " * plot_data.py\n",
     "\n",
-    " * lab7.py"
+    " * lab7.ipynb"
    ]
   },
   {
@@ -125,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
